--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Right section with dark background and vertical menu -->
     <div class="right-section">
       <ul class="menu-list">
-        <li><a href="/history.html">LỊCH SỬ HÌNH THÀNH</a></li>
+        <li><a href="./history.html">LỊCH SỬ HÌNH THÀNH</a></li>
         <li>DI TÍCH LỊCH SỬ- VĂN HÓA</li>
         <li>DI TÍCH KIẾN TRÚC- NGHỆ THUẬT</li>
         <li>LÀNG NGHỀ</li>
