feat: add new pages

--- a/history.html
+++ b/history.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <title>Lịch Sử Địa Danh – 18 Thôn Vườn Trầu</title>
+
+  <!-- Google font -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    Hiiii
-    
+    <a href="index.html" class="home-btn" title="Quay về trang chủ">HOME</a>
+
+  <div class="history-wrapper">
+
+    <!-- Vertical title (now floats 10 % from the left edge) -->
+    <div class="vertical-strip">
+        <span class="vertical-title">LỊCH SỬ ĐỊA DANH</span>
+      </div>
+    <!-- Article starts at 50 % of the screen width -->
+    <main class="history-content">
+
+      <section>
+        <h2>HÌNH THÀNH</h2>
+        <p>Mười tám thôn vườn Trầu hình thành từ những năm của thế kỉ XVII cùng với công cuộc khai phá Nam Bộ. Từ 6 thôn ban đầu phát triển lên 18 thôn, sản nghiệp chính của người dân là trầu, cau. Vì thế mà nơi đây còn gọi “Mười tám thôn vườn Trầu” hay “Tháp bát phủ lưu viên”.</p>
+      </section><hr>
+
+      <section>
+        <h2>K/N 18 THÔN VƯỜN TRẦU</h2>
+        <p>Cuộc khởi nghĩa do Phan Văn Hớn (Phan Công Hớn) cùng với Nguyễn Văn Quá lãnh đạo. Nghĩa quân đã tấn công vào dinh quan Bình Long, chặt đầu tên Trần Tú Ca đem bêu thị chúng. Sau đó hai ông bị thực dân Pháp truy sát và xử tử, người dân biết ơn nên lập đền thờ tại địa phương.</p>
+      </section><hr>
+
+      <section>
+        <h2>NAM KỲ KHỞI NGHĨA</h2>
+        <p>Tháng 9/1940, Xứ ủy Nam Kỳ họp tại Hóc Môn. Rạng sáng 23/11/1940 lệnh khởi nghĩa được phát đi, Mười tám thôn vườn Trầu là địa phương đầu tiên khởi nghĩa. Thực dân Pháp đã tàn sát cuộc khởi nghĩa trong biển máu. Sau ngày Nam Kỳ khởi nghĩa chúng lập 8 Hóc Môn 3 trường bắn để xử tử đồng bào yêu nước.</p>
+      </section><hr>
+
+      <section>
+        <h2>KHÁNG CHIẾN CHỐNG MỸ</h2>
+        <p>Từ năm 1954‑1975, quân và nhân Hóc Môn đã hăng hái tham gia cuộc kháng chiến dưới sự lãnh đạo của Đảng và Mặt trận Giải phóng dân tộc Miền Nam Việt Nam. Đúng 7 giờ 30 phút sáng 30/4/1975, Hóc Môn được giải phóng, lá cờ Tổ quốc tung bay khắp các nẻo đường.</p>
+      </section><hr>
+
+      <section>
+        <h2>TỪ NĂM 1975 – NAY</h2>
+        <p>Sau khi giành được độc lập, thống nhất, quân và dân huyện Hóc Môn tích cực tham gia sản xuất nhằm khôi phục và bảo vệ Tổ quốc. Trong bối cảnh mới, Hóc Môn vẫn duy trì được những giá trị truyền thống cốt lõi của Mười tám thôn vườn Trầu, tạo động lực thúc đẩy phát triển kinh tế, văn hóa, xã hội.</p>
+      </section>
+
+    </main>
+  </div>
 </body>
 </html>
