--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div class="right-section">
       <ul class="menu-list">
         <li><a href="./history.html">LỊCH SỬ HÌNH THÀNH</a></li>
-        <li>DI TÍCH LỊCH SỬ- VĂN HÓA</li>
-        <li>DI TÍCH KIẾN TRÚC- NGHỆ THUẬT</li>
-        <li>LÀNG NGHỀ</li>
-        <li>TÔN GIÁO</li>
+        <li><a href="./relics.html">DI TÍCH LỊCH SỬ- VĂN HÓA</a></li>
+        <li><a href="./relics2.html">DI TÍCH KIẾN TRÚC- NGHỆ THUẬT</a></li>
+        <li><a href="./trad-job.html">LÀNG NGHỀ</a></li>
+        <li><a href="./religion.html">TÔN GIÁO</a></li>
         <li>ĐỊA ĐIỂM DU LỊCH</li>
       </ul>
     </div>
